# webminer

./: .gitignore  LICENSE  README.md  gen_data.py  main.py  pyproject.toml
crawler/spiders/: shopee_spider.py
