[tool.poetry]
name = "webminer"
version = "0.1.0"
description = "A web miner."
authors = ["michael <michaelshih123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^2.5.0"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
